--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
 
 body {
  font-family: 'Roboto', sans-serif;
- color: #2E2F42;
- background-color:#434455;
+ color: #434455;
+ background-color:#ffffff;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
@@ -46,6 +46,7 @@ ul {
 .feature-title,
 .name-title,
 .portfolio-title {
+    color:#2E2F42;
     font-size: 20px;
     letter-spacing: 0.4px;
     font-weight: 500;
@@ -55,6 +56,7 @@ ul {
 .section-features-title,
 .section-portfolio-title,
 .section-team-title {
+    color: #2E2F42;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
@@ -69,10 +71,6 @@ ul {
 }
 
 /* Page Header */
-
-.header-block {
-    background-color: #F4F4FD;
-}
 
 .logo-accent-header {
     color: #2E2F42;
@@ -136,10 +134,6 @@ ul {
 
 /* Features Section */
 
-.features-section {
-    background-color: #F4F4FD;
-}
-
 /* Our Team */
 
 .team-section {
@@ -147,17 +141,13 @@ ul {
 }
 
 .team-card {
-    background-color: #F4F4FD;
+    background-color: #ffffff;
 }
 
 /* Our Portfolio */
 
-.portfolio-section {
-    background-color: #F4F4FD;
-}
-
 .portfolio-card {
-    background: #F4F4FD;
+    background: #ffffff;
 }
 
 .portfolio-title,
@@ -171,7 +161,7 @@ ul {
     background-color: #2E2F42;
 }
 
-.logotype-accent-footer {
+.logo-accent-footer {
     color: #F4F4FD;
 }
 
