--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
- line-height: 24px;
+ line-height: 1.5;
  letter-spacing: 0.32px;
 }
 a {
