--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,8 @@ body {
  color: #434455;
  background-color:#ffffff;
  font-size: 16px;
- font-style: normal;
- font-weight: 400;
  line-height: 1.5;
- letter-spacing: 0.32px;
+ letter-spacing: 0.02em;
 }
 a {
     text-decoration: none;
@@ -26,21 +24,8 @@ ul {
     font-size: 18px;
     font-weight: 700;
     line-height: 1.17;
-    letter-spacing: 0.54px;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
-}
-
-.logotype-header:hover,
-.logotype-footer:hover,
-.logotype-header:focus, 
-.logotype-footer:focus {
-    opacity: 0.85;
-}
-
-.logotype-header:active,
-.logotype-footer:active {
-    color:#2E2F42;
-    opacity: 0.45;
 }
 
 .feature-title,
@@ -48,8 +33,8 @@ ul {
 .portfolio-title {
     color:#2E2F42;
     font-size: 20px;
-    letter-spacing: 0.4px;
     font-weight: 500;
+    line-height: 1,2;
     text-transform: capitalize;
 }
 
@@ -60,7 +45,6 @@ ul {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
-    letter-spacing: 0.72px;
     text-transform: capitalize;
 }
 
@@ -112,7 +96,6 @@ ul {
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
-    letter-spacing: 1.12px;
     text-align: center;
 }
 
@@ -124,7 +107,6 @@ ul {
     background:#4D5AE5;
     color: #ffffff;
     font-weight: 500;
-    letter-spacing: 0.64px;
     cursor: pointer;
 }
 
@@ -161,7 +143,7 @@ ul {
 
 .portfolio-title,
 .portfolio-text {
-    text-indent: 16px;
+    text-indent: 1em;
 }
 
 /* Footer */
