line-height fixed 1.1

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,8 +120,8 @@ ul {
 
 /* Features Section */
 
-.feature-title {
-    line-height: 1.2em;
+.section-features-title {
+    line-height: 1.2;
 }
 
 /* Our Team */
